--- a/index.html
+++ b/index.html
@@ -48,26 +48,25 @@
     .tiny{ margin-top:10px; font-size:12px; opacity:.55; }
   </style>
 </head>
+
 <body>
-  <div class="wrap">
-    <h2>🎲 今日限定抽獎</h2>
-    <p class="sub">按下去就算數。手氣不好不要怪我（我也怕）😶‍🌫️</p>
+<div class="wrap">
+  <h2>🎲 今日限定抽獎</h2>
+  <p class="sub">按下去就算數。手氣不好不要怪我（我也怕）😶‍🌫️</p>
 
-    <div class="stage">
-      <div class="pointer"></div>
-      <canvas id="wheel" width="680" height="680"></canvas>
-    </div>
-
-    <button id="spinBtn" class="btn">開始抽獎</button>
-
-    <div id="result" class="result"></div>
-    <div class="tiny">※ 若沒聽到聲音：請確認手機未靜音 / 音量不為 0</div>
+  <div class="stage">
+    <div class="pointer"></div>
+    <canvas id="wheel" width="680" height="680"></canvas>
   </div>
 
-<script>
-/** ====== 你只要改這兩個 ====== */
+  <button id="spinBtn" class="btn">開始抽獎</button>
 
-// 1) 獎品清單（你要什麼就放什麼）
+  <div id="result" class="result"></div>
+  <div class="tiny">※ 若沒聽到聲音：請確認手機未靜音 / 音量不為 0</div>
+</div>
+
+<script>
+/* ===== 可改區 ===== */
 const prizes = [
   "🎁 請妳喝一杯",
   "🎁 指定一天陪妳",
@@ -76,226 +75,126 @@ const prizes = [
   "😏 （測試獎勵）"
 ];
 
-// 2) 回傳位置（Discord Webhook / 你的後端 / Apps Script URL）
-const WEBHOOK_URL = "https://script.google.com/macros/library/d/1zmQumaXYPjW-OQvgKw9FD51hY2y9O6LFbHMyTCnJANae9eIE336069eC/1";
+// 你的 Google Apps Script Web App URL
+const WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbwmK2iq0buMnVpxMPLJdd4yhOvpykvZ9nKv-9RUFBI-F3rMGtSELuYLLie4OjflhAnv/exec";
+/* ===== 可改區結束 ===== */
 
-/** ====== 轉盤繪製 ====== */
 const canvas = document.getElementById("wheel");
 const ctx = canvas.getContext("2d");
 const W = canvas.width, H = canvas.height;
 const cx = W/2, cy = H/2;
 const radius = Math.min(W,H)*0.46;
 
-let rotation = 0; // radians
+let rotation = 0;
 let spinning = false;
 
-// 產生漂亮但簡單的分區色
 function sliceColor(i, n){
-  // 不指定特定顏色主題，做一組看得清楚的 HSL
   const hue = (i * (360/n)) % 360;
-  return `hsl(${hue}, 70%, 45%)`;
+  return `hsl(${hue},70%,45%)`;
 }
 
-function drawWheel(rot = rotation){
+function drawWheel(rot){
   ctx.clearRect(0,0,W,H);
   const n = prizes.length;
-  const arc = (Math.PI * 2) / n;
+  const arc = Math.PI*2/n;
 
-  // 外圈
   ctx.save();
-  ctx.translate(cx, cy);
+  ctx.translate(cx,cy);
   ctx.rotate(rot);
 
   for(let i=0;i<n;i++){
-    // sector
     ctx.beginPath();
     ctx.moveTo(0,0);
-    ctx.arc(0,0,radius, i*arc, (i+1)*arc);
-    ctx.closePath();
-    ctx.fillStyle = sliceColor(i, n);
+    ctx.arc(0,0,radius,i*arc,(i+1)*arc);
+    ctx.fillStyle = sliceColor(i,n);
     ctx.fill();
-
-    // 分隔線
-    ctx.strokeStyle = "rgba(255,255,255,.25)";
-    ctx.lineWidth = 6;
+    ctx.strokeStyle="rgba(255,255,255,.25)";
+    ctx.lineWidth=6;
     ctx.stroke();
 
-    // 文字
     ctx.save();
-    ctx.rotate(i*arc + arc/2);
-    ctx.textAlign = "right";
-    ctx.fillStyle = "rgba(255,255,255,.95)";
-    ctx.font = "bold 28px system-ui, -apple-system, Noto Sans TC, sans-serif";
-    // 文字太長就裁一下（避免爆版）
-    const label = prizes[i].length > 16 ? prizes[i].slice(0,16)+"…" : prizes[i];
-    ctx.fillText(label, radius - 20, 10);
+    ctx.rotate(i*arc+arc/2);
+    ctx.textAlign="right";
+    ctx.fillStyle="#fff";
+    ctx.font="bold 28px system-ui";
+    const label = prizes[i].length>16 ? prizes[i].slice(0,16)+"…" : prizes[i];
+    ctx.fillText(label,radius-20,10);
     ctx.restore();
   }
-
-  // 中心圓
-  ctx.beginPath();
-  ctx.arc(0,0,70,0,Math.PI*2);
-  ctx.fillStyle = "rgba(0,0,0,.35)";
-  ctx.fill();
-  ctx.strokeStyle = "rgba(255,255,255,.18)";
-  ctx.lineWidth = 8;
-  ctx.stroke();
-
-  ctx.fillStyle = "rgba(255,255,255,.92)";
-  ctx.font = "900 26px system-ui, -apple-system, Noto Sans TC, sans-serif";
-  ctx.textAlign = "center";
-  ctx.fillText("SPIN", 0, 10);
-
   ctx.restore();
 }
 
-// 初始畫面
-drawWheel();
+drawWheel(0);
 
-/** ====== 音效（Web Audio） ====== */
-let audioCtx = null;
-function ensureAudio(){
-  if(!audioCtx){
-    audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+function pickIndex(rot){
+  const arc = Math.PI*2/prizes.length;
+  const a = ((-Math.PI/2 - rot) + Math.PI*2) % (Math.PI*2);
+  return Math.floor(a/arc);
+}
+
+async function sendResult(data){
+  if(!WEBHOOK_URL) return;
+
+  const form = new URLSearchParams();
+  form.append("prize", data.prize);
+  form.append("index", data.index);
+  form.append("time", data.time);
+  form.append("ua", data.ua);
+
+  try{
+    await fetch(WEBHOOK_URL,{
+      method:"POST",
+      body:form
+    });
+  }catch(e){
+    console.warn("send failed",e);
   }
-  if(audioCtx.state === "suspended") audioCtx.resume();
 }
 
-function beep(freq=880, duration=0.03, type="sine", gainVal=0.06){
-  ensureAudio();
-  const t = audioCtx.currentTime;
-  const o = audioCtx.createOscillator();
-  const g = audioCtx.createGain();
-  o.type = type;
-  o.frequency.setValueAtTime(freq, t);
-  g.gain.setValueAtTime(gainVal, t);
-  g.gain.exponentialRampToValueAtTime(0.0001, t + duration);
-  o.connect(g); g.connect(audioCtx.destination);
-  o.start(t); o.stop(t + duration);
-}
-
-// 轉盤「咔哒」聲：每過一格就啵一下
-function tick(){
-  beep(1200, 0.02, "square", 0.05);
-}
-
-// 中獎小旋律
-function winJingle(){
-  beep(784, 0.06, "sine", 0.07);
-  setTimeout(()=>beep(988, 0.06, "sine", 0.07), 80);
-  setTimeout(()=>beep(1175,0.08, "sine", 0.08), 160);
-}
-
-/** ====== 抽獎邏輯 ====== */
 const btn = document.getElementById("spinBtn");
 const resultEl = document.getElementById("result");
 
-// 指針在正上方，代表「上方指到的扇區」為結果。
-// 我們用角度算出停下時指針指到第幾格。
-function pickIndexFromRotation(rot){
-  const n = prizes.length;
-  const arc = (Math.PI*2)/n;
-
-  // 指針在 -90度（正上方），轉盤旋轉 rot
-  const pointerAngle = (-Math.PI/2 - rot) % (Math.PI*2);
-  const a = (pointerAngle + Math.PI*2) % (Math.PI*2);
-  const idx = Math.floor(a / arc); // 0..n-1
-  return idx;
-}
-
-// 送結果到你那邊（不讓她知道）
-async function sendResult(payload){
-  if(!WEBHOOK_URL || WEBHOOK_URL.includes("YOUR_WEBHOOK_URL")) return;
-
-  try{
-    await fetch(WEBHOOK_URL, {
-      method:"POST",
-      headers: {"Content-Type":"application/json"},
-      body: JSON.stringify(payload)
-    });
-  }catch(e){
-    // 靜默失敗：別在她面前爆炸
-    console.warn("Webhook failed:", e);
-  }
-}
-
-// ease out
-function easeOutCubic(x){ return 1 - Math.pow(1-x, 3); }
-
-btn.addEventListener("click", async () => {
+btn.onclick = ()=>{
   if(spinning) return;
-  spinning = true;
-
-  ensureAudio(); // iOS 要求：由點擊觸發才能啟動聲音
-  resultEl.style.display = "none";
-  btn.disabled = true;
-  btn.textContent = "抽獎中…";
+  spinning=true;
+  btn.disabled=true;
+  btn.textContent="抽獎中…";
+  resultEl.style.display="none";
 
   const n = prizes.length;
-  const arc = (Math.PI*2)/n;
+  const arc = Math.PI*2/n;
+  const target = Math.floor(Math.random()*n);
+  const extra = 6+Math.random()*3;
+  const targetRot = (-Math.PI/2-(target+0.5)*arc)+extra*Math.PI*2;
+  const start = rotation;
+  const delta = targetRot-start;
+  const t0 = performance.now();
 
-  // 隨機目標 index（你想要控機率就改這裡，但別太明顯 😏）
-  const targetIndex = Math.floor(Math.random() * n);
-
-  // 讓它多轉幾圈 + 精準停在 targetIndex 的中心
-  const extraSpins = 6 + Math.floor(Math.random()*3); // 6~8圈
-  const targetAngleCenter = (targetIndex + 0.5) * arc; // 扇區中心角
-  // 我們要讓 pointerAngle = targetAngleCenter
-  // pointerAngle = (-pi/2 - rot) mod 2pi
-  // => rot = -pi/2 - targetAngleCenter  (mod 2pi)
-  const desiredRot = (-Math.PI/2 - targetAngleCenter);
-  const finalRot = desiredRot + extraSpins * Math.PI * 2;
-
-  const startRot = rotation;
-  const delta = finalRot - startRot;
-
-  const duration = 2600 + Math.random()*900; // 2.6~3.5 秒
-  const start = performance.now();
-
-  let lastTickIdx = pickIndexFromRotation(rotation);
-
-  function animate(now){
-    const t = Math.min(1, (now - start)/duration);
-    const eased = easeOutCubic(t);
-    rotation = startRot + delta * eased;
+  function anim(t){
+    const p = Math.min(1,(t-t0)/3000);
+    rotation = start + delta*(1-Math.pow(1-p,3));
     drawWheel(rotation);
-
-    // tick 音：每跨過一格觸發一次
-    const idx = pickIndexFromRotation(rotation);
-    if(idx !== lastTickIdx){
-      tick();
-      lastTickIdx = idx;
-    }
-
-    if(t < 1){
-      requestAnimationFrame(animate);
+    if(p<1){
+      requestAnimationFrame(anim);
     }else{
-      spinning = false;
+      spinning=false;
+      const idx = pickIndex(rotation);
+      const prize = prizes[idx];
+      resultEl.textContent="✅ 你抽到："+prize;
+      resultEl.style.display="block";
+      btn.disabled=false;
+      btn.textContent="再抽一次（不建議太貪心）";
 
-      // 最終 index（理論上=targetIndex）
-      const finalIndex = pickIndexFromRotation(rotation);
-      const prize = prizes[finalIndex];
-
-      winJingle();
-
-      resultEl.textContent = `✅ 你抽到：${prize}`;
-      resultEl.style.display = "block";
-      btn.disabled = false;
-      btn.textContent = "再抽一次（不建議太貪心）";
-
-      // 回傳結果給你
       sendResult({
         prize,
-        index: finalIndex,
+        index: idx,
         time: new Date().toISOString(),
-        userAgent: navigator.userAgent
+        ua: navigator.userAgent
       });
     }
   }
-
-  requestAnimationFrame(animate);
-});
+  requestAnimationFrame(anim);
+};
 </script>
 </body>
 </html>
-
