--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ const prizes = [
 ];
 
 // 你的 Google Apps Script Web App URL
-const WEBHOOK_URL = "https://script.google.com/macros/s/AKfycbwmK2iq0buMnVpxMPLJdd4yhOvpykvZ9nKv-9RUFBI-F3rMGtSELuYLLie4OjflhAnv/exec";
+const WEBHOOK_URL = "https://discord.com/api/webhooks/1470385011277435103/u9zLFC5JjyLNsQpS8qJXwspVEyppZgAwsrbwr3UB5Bb4f3dcLWKmRLFvFn2jKSunUeXj";
 /* ===== 可改區結束 ===== */
 
 const canvas = document.getElementById("wheel");
@@ -198,3 +198,4 @@ btn.onclick = ()=>{
 </script>
 </body>
 </html>
+
