--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
 <script>
 /* ===== 可改區 ===== */
 const prizes = [
-  "🎁 請妳喝一杯",
-  "🎁 指定一天陪妳",
-  "🎁 神秘驚喜",
-  "😏 （下次再來）",
-  "😏 （測試獎勵）"
+  "🎁 染劑",
+  "🎁 時尚美學",
+  "🎁 情感動作",
+  "🎁 坐騎",
+  "🎁 時尚飾品",
+  "🎁 迷你寵物"
 ];
 
 // 👉 換成你自己的 Discord Webhook URL
@@ -211,3 +212,4 @@ btn.onclick = ()=>{
 </script>
 </body>
 </html>
+
