Fix HTML encoding and update prize text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
 <div class="wrap">
   <h2>🎲情人節&新年限定轉盤獎</h2>
-  <p class="sub">根據轉到的類別，可以任選一樣商城禮物🎁</p>
+  <p class="sub">根據轉到的類別，可以任選一樣商城物品👉</p>
 
   <div class="stage">
     <div class="pointer"></div>
@@ -62,7 +62,7 @@
   <button id="spinBtn" class="btn">開始抽獎</button>
 
   <div id="result" class="result"></div>
-  <div class="tiny">※只限抽一次哦！</div>
+  <div class="tiny">※只限抽一次哦！😏</div>
 </div>
 
 <script>
@@ -198,7 +198,7 @@ btn.onclick = ()=>{
       resultEl.textContent="✅ 你抽到："+prize;
       resultEl.style.display="block";
       btn.disabled=false;
-      btn.textContent="別想作弊再抽哦:unamused: ";
+      btn.textContent="別想作弊重抽哦!🤥";
 
       sendResult({
         prize,
@@ -212,5 +212,6 @@ btn.onclick = ()=>{
 </script>
 </body>
 </html>
+
 
 
