Fix HTML structure and update title and styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>🎲 今日限定抽獎</title>
+  <title>🎲情人節&新年限定轉盤</title>
   <style>
     :root { --w: 340px; }
     body{
@@ -212,6 +212,7 @@ btn.onclick = ()=>{
 </script>
 </body>
 </html>
+
 
 
 
