--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>🎲情人節&新年限定轉盤</title>
+  <title>🎰情人節&新年限定轉盤</title>
   <style>
     :root { --w: 340px; }
     body{
@@ -51,7 +51,7 @@
 
 <body>
 <div class="wrap">
-  <h2>🎲情人節&新年限定轉盤獎</h2>
+  <h2>🎰情人節&新年限定轉盤獎</h2>
   <p class="sub">根據轉到的類別，可以任選一樣商城物品👉</p>
 
   <div class="stage">
@@ -59,7 +59,7 @@
     <canvas id="wheel" width="680" height="680"></canvas>
   </div>
 
-  <button id="spinBtn" class="btn">開始抽獎</button>
+  <button id="spinBtn" class="btn">點我抽獎🕹️</button>
 
   <div id="result" class="result"></div>
   <div class="tiny">※只限抽一次哦！😏</div>
@@ -212,6 +212,7 @@ btn.onclick = ()=>{
 </script>
 </body>
 </html>
+
 
 
 
