--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <body>
 <div class="wrap">
-  <h2>🎰情人節&新年限定轉盤獎</h2>
+  <h2>🎰情人節&新年限定轉盤</h2>
   <p class="sub">根據轉到的類別，可以任選一樣商城物品👉</p>
 
   <div class="stage">
@@ -173,7 +173,7 @@ btn.onclick = ()=>{
   if(spinning) return;
   spinning=true;
   btn.disabled=true;
-  btn.textContent="抽獎中…";
+  btn.textContent="抽獎中…🎲";
   resultEl.style.display="none";
 
   const n = prizes.length;
@@ -212,6 +212,7 @@ btn.onclick = ()=>{
 </script>
 </body>
 </html>
+
 
 
 
