--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <script>
 /* ===== 可改區 ===== */
 const prizes = [
+  "🎁 全商城任選",
   "🎁 染劑",
   "🎁 時尚美學",
   "🎁 情感動作",
@@ -212,6 +213,7 @@ btn.onclick = ()=>{
 </script>
 </body>
 </html>
+
 
 
 
